[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm-manager-server"
version = "0.1.0"
description = "Server-side alarm grouping and responsible-party resolution (SAYMON)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
alarm-manager-server = "alarm_manager_server.__main__:main"
alarm-manager-worker = "alarm_manager_server.worker.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alarm_manager_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
